--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,7 @@
             "error",
             "always"
         ],
-        "max-len": ["error"],
+        "max-len": ["error", 120],
         "unicorn/number-literal-case": "error",
         "unicorn/filename-case": [
             "error",
@@ -48,6 +48,7 @@
                 "case": "pascalCase"
             }
         ],
-        "@typescript-eslint/no-unused-vars": ["error"]
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "spaced-comment": ["error", "always"]
     }
 }
