--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
         "test": "jest",
         "lint": "eslint ./src/**/*",
         "lint-fix": "eslint ./src/**/* --fix",
-        "format": "prettier-eslint --write \"src/**/*.ts\" && prettier-eslint --write \"__tests__/**/*.ts\""
+        "format": "prettier-eslint --write \"src/**/*.ts\" && prettier-eslint --write \"__tests__/**/*.ts\"",
+        "server": "ts-node Server.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^4.17.1",
         "@types/jest": "^24.0.18",
         "@types/node": "^12.7.9",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
@@ -27,5 +29,11 @@
         "ts-jest": "^24.1.0",
         "ts-node": "^8.4.1",
         "typescript": "^3.6.3"
+    },
+    "dependencies": {
+        "@types/socket.io": "^2.1.3",
+        "express": "^4.17.1",
+        "open": "^6.4.0",
+        "socket.io": "^2.3.0"
     }
 }
